--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,10 @@
         <link rel="icon" type="image/svg+xml" href="favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Title</title>
-        <link rel="stylesheet" href="/sass/main.scss" />
+        <script src="main.js" type="module"></script>
+        <link rel="stylesheet" href="/scss/main.scss" />
     </head>
-
     <body>
-        <header></header>
-        <main></main>
-        <footer></footer>
-
-        <script src="/main.js"></script>
+        <p>Go to the <a href="/pages/about/">about page</a>.</p>
     </body>
 </html>
