rename variables and reorganize the files

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
         <link rel="icon" type="image/svg+xml" href="favicon.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Title</title>
-        <script src="main.js" type="module"></script>
         <link rel="stylesheet" href="/scss/main.scss" />
+        <script src="main.js" type="module" defer></script>
     </head>
     <body>
-        <p>Go to the <a href="/pages/about/">about page</a>.</p>
+        <p class="fs-600">Go to the <a href="/pages/about/">About Page</a>.</p>
     </body>
 </html>
