--- a/src/pages/about/index.html
+++ b/src/pages/about/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Title</title>
         <link rel="stylesheet" href="../sass/main.scss" />
+        <script src="main.js" type="module" defer></script>
     </head>
     <body>
-        <h1>This is the About page.</h1>
-        <p>Go to the <a href="/">home page</a>.</p>
+        <p>Go to the <a href="/">Home Page</a>.</p>
     </body>
 </html>
